finish example and tweak kwargs
Signed-off-by: rawkintrevo <trevor.d.grant@gmail.com>

--- a/examples/Basic Usage.ipynb
+++ b/examples/Basic Usage.ipynb
@@ -70,10 +70,28 @@
     "# model = find_langchain_model(platform=\"ollama\", model_id= \"granite-code:8b\")\n"
    ],
    "metadata": {
-    "id": "qTXzIbRN2hJ6"
+    "id": "qTXzIbRN2hJ6",
+    "pycharm": {
+     "is_executing": true
+    }
    },
    "execution_count": null,
    "outputs": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "prompt = \"\"\"\n",
+    "Complete this famous phrase: a shark on whisky is might risky, a shark on beer is\n",
+    "\"\"\"\n",
+    "\n",
+    "model.invoke(prompt)\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ]
 }
