add replicate dependency
Signed-off-by: rawkintrevo <trevor.d.grant@gmail.com>

--- a/examples/Basic Usage.ipynb
+++ b/examples/Basic Usage.ipynb
@@ -17,13 +17,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "from google.colab import userdata\n",
+    "os.environ['REPLICATE_API_TOKEN'] = userdata.get('REPLICATE_API_TOKEN')"
+   ],
    "metadata": {
-    "id": "8AY6igsZ2QTm"
-   },
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "outputs": [],
    "source": [
     "!pip install git+https://github.com/ibm-granite-community/utils"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
