switch to os.system
Signed-off-by: rawkintrevo <trevor.d.grant@gmail.com>

--- a/examples/Basic_Usage.ipynb
+++ b/examples/Basic_Usage.ipynb
@@ -17,11 +17,11 @@
   {
    "cell_type": "code",
    "source": [
+    "import os\n",
     "from ibm_granite_community.notebook_utils import is_colab\n",
     "\n",
     "if is_colab():\n",
     "    from google.colab import userdata\n",
-    "    import os\n",
     "    os.environ['REPLICATE_API_TOKEN'] = userdata.get('REPLICATE_API_TOKEN')"
    ],
    "metadata": {
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "source": [
-    "!nohup ollama serve &"
+    "os.system(\"nohup ollama serve &\")"
    ],
    "metadata": {
     "id": "S2aQog02Gouo"
