Add WatsonX as langchain provider Generalize get_api_key to get_env_var Update CI
Signed-off-by: Fayvor Love <fayvor@gmail.com>

--- a/examples/Basic_Usage.ipynb
+++ b/examples/Basic_Usage.ipynb
@@ -2,38 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "id": "gGyVx2RyJ128"
-   },
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "from ibm_granite_community.notebook_utils import is_colab\n",
-    "\n",
-    "if is_colab():\n",
-    "    from google.colab import userdata\n",
-    "    os.environ['REPLICATE_API_TOKEN'] = userdata.get('REPLICATE_API_TOKEN')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "id": "8AY6igsZ2QTm"
    },
    "outputs": [],
    "source": [
-    "!pip install git+https://github.com/ibm-granite-community/utils"
+    "!pip install git+https://github.com/ibm-granite-community/utils -U"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "!pip install langchain-core"
+    "Or, for utils development, install the local utils package in editable mode:\n",
+    "\n",
+    "`pip install -e ../. -U`"
    ]
   },
   {
@@ -55,6 +39,7 @@
    },
    "outputs": [],
    "source": [
+    "import os\n",
     "os.system(\"nohup ollama serve &\")"
    ]
   },
@@ -71,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {
     "id": "qTXzIbRN2hJ6",
     "pycharm": {
@@ -81,9 +66,18 @@
    "outputs": [],
    "source": [
     "from ibm_granite_community.langchain_utils import find_langchain_model\n",
+    "from ibm_granite_community.notebook_utils import get_env_var\n",
     "\n",
-    "colab_model = find_langchain_model(platform=\"Replicate\", model_id= \"ibm-granite/granite-8b-code-instruct-128k\")\n",
-    "ollama_model = find_langchain_model(platform=\"ollama\", model_id= \"granite-code:8b\")\n"
+    "replicate_model = find_langchain_model(platform=\"Replicate\", model_id= \"ibm-granite/granite-8b-code-instruct-128k\")\n",
+    "ollama_model = find_langchain_model(platform=\"ollama\", model_id= \"granite-code:8b\")\n",
+    "watsonx_model = find_langchain_model(platform=\"watsonx\", model_id= \"ibm/granite-13b-chat-v2\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Use the models to complete a prompt"
    ]
   },
   {
@@ -99,11 +93,12 @@
    "outputs": [],
    "source": [
     "prompt = \"\"\"\n",
-    "Complete this famous phrase: a shark on whisky is might risky, a shark on beer is\n",
+    "Complete this famous phrase: a shark on whisky is mighty risky, a shark on beer is\n",
     "\"\"\"\n",
     "\n",
-    "print(f\"Colab: {colab_model.invoke(prompt)}\")\n",
-    "print(f\"Ollama: {ollama_model.invoke(prompt)}\")\n"
+    "print(f\"Replicate: {replicate_model.invoke(prompt)}\")\n",
+    "print(f\"Ollama: {ollama_model.invoke(prompt)}\")\n",
+    "print(f\"WatsonX: {watsonx_model.invoke(prompt)}\")\n"
    ]
   },
   {
@@ -115,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
