Finish Getting Started with Ollama
Signed-off-by: Fayvor Love <fayvor@gmail.com>

--- a/recipes/Getting_Started/Getting_Started_with_Ollama.ipynb
+++ b/recipes/Getting_Started/Getting_Started_with_Ollama.ipynb
@@ -11,81 +11,77 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Running an LLM on Ollama"
+    "## Running an LLM on Ollama "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Install Ollama\n",
+    "\n",
+    "_Option A: Package Installer (MacOS, Windows)_\n",
+    "\n",
+    "[Download from Ollama.com](https://ollama.com/download) and install "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "_Option B: Shell Script (Linux)_"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
-      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100 13320    0 13320    0     0  13456      0 --:--:-- --:--:-- --:--:-- 13454\n",
-      "ERROR This script is intended to run on Linux only.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!curl https://ollama.ai/install.sh | sh"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "source": [
+    "### Start the Ollama server\n",
+    "\n",
+    "Using `nohup` and `&` will run the server in the background and you can close the terminal."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import os\n",
     "os.system(\"nohup ollama serve &\")"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Error: listen tcp 127.0.0.1:11434: bind: address already in use\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[?25lpulling manifest ⠋ \u001b[?25h\u001b[?25l\u001b[2K\u001b[1Gpulling manifest ⠙ \u001b[?25h\u001b[?25l\u001b[2K\u001b[1Gpulling manifest ⠹ \u001b[?25h\u001b[?25l\u001b[2K\u001b[1Gpulling manifest ⠸ \u001b[?25h\u001b[?25l\u001b[2K\u001b[1Gpulling manifest ⠼ \u001b[?25h\u001b[?25l\u001b[2K\u001b[1Gpulling manifest ⠴ \u001b[?25h\u001b[?25l\u001b[2K\u001b[1Gpulling manifest ⠦ \u001b[?25h\u001b[?25l\u001b[2K\u001b[1Gpulling manifest ⠧ \u001b[?25h\u001b[?25l\u001b[2K\u001b[1Gpulling manifest ⠇ \u001b[?25h\u001b[?25l\u001b[2K\u001b[1Gpulling manifest ⠏ \u001b[?25h\u001b[?25l\u001b[2K\u001b[1Gpulling manifest ⠋ \u001b[?25h\u001b[?25l\u001b[2K\u001b[1Gpulling manifest ⠙ \u001b[?25h\u001b[?25l\u001b[2K\u001b[1Gpulling manifest ⠹ \u001b[?25h\u001b[?25l\u001b[2K\u001b[1Gpulling manifest \n",
-      "pulling bf481f838ba0... 100% ▕████████████████▏ 4.6 GB                         \n",
-      "pulling 977871d28ce4... 100% ▕████████████████▏  679 B                         \n",
-      "pulling 43070e2d4e53... 100% ▕████████████████▏  11 KB                         \n",
-      "pulling f1406f0e20d0... 100% ▕████████████████▏   43 B                         \n",
-      "pulling befc696774ab... 100% ▕████████████████▏  559 B                         \n",
-      "verifying sha256 digest \n",
-      "writing manifest \n",
-      "removing any unused layers \n",
-      "success \u001b[?25h\n"
-     ]
-    }
-   ],
    "source": [
-    "!ollama pull granite-code:8b"
+    "### Pull the model\n",
+    "\n",
+    "IBM Granite Code models available on Ollama can be found [here](https://ollama.com/library/granite-code).\n",
+    "\n",
+    "Granite Code 3b: `ollama pull granite-code:3b`\n",
+    "\n",
+    "Granite Code 8b: `ollama pull granite-code:8b`\n",
+    "\n",
+    "Granite Code 20b: `ollama pull granite-code:20b`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!ollama pull granite-code:3b"
    ]
   },
   {
@@ -96,31 +92,57 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "from langchain_ollama.llms import OllamaLLM\n",
-    "model = OllamaLLM(model=\"granite-code:8b\")"
+    "### Select a model\n",
+    "\n",
+    "Select one of the models you pulled with Ollama above."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Hi there! How can I help you today?\\n'"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "model_id = \"granite-code:3b\"\n",
+    "# model_id = \"granite-code:8b\"\n",
+    "# model_id = \"granite-code:20b\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Instantiate the model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_ollama.llms import OllamaLLM\n",
+    "\n",
+    "model = OllamaLLM(model=model_id)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Run the model\n",
+    "\n",
+    "Invoke the model with a prompt, and get an answer back."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "model.invoke(\"hello\")"
    ]
