Refine Getting Started recipes
Signed-off-by: Fayvor Love <fayvor@gmail.com>

--- a/recipes/Getting_Started/Getting_Started_with_Ollama.ipynb
+++ b/recipes/Getting_Started/Getting_Started_with_Ollama.ipynb
@@ -88,7 +88,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Accessing the LLM with Langchain"
+    "## Querying the LLM with Langchain"
    ]
   },
   {
@@ -115,7 +115,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Instantiate the model"
+    "### Instantiate the model client"
    ]
   },
   {
@@ -133,7 +133,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Run the model\n",
+    "### Perform inference\n",
     "\n",
     "Invoke the model with a prompt, and get an answer back."
    ]
@@ -144,7 +144,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.invoke(\"hello\")"
+    "prompt = \"\"\"\n",
+    "    Show me a SQL query that fetches all columns for the first 50 rows\n",
+    "    in a table named 'users'.\"\"\"\n",
+    "\n",
+    "response = model.invoke(prompt)\n",
+    "print(response)"
    ]
   }
  ],
