--- a/recipes/Getting_Started/Getting_Started_with_WatsonX.ipynb
+++ b/recipes/Getting_Started/Getting_Started_with_WatsonX.ipynb
@@ -5,7 +5,15 @@
    "id": "7828a665",
    "metadata": {},
    "source": [
-    "## Getting Started with IBM WatsonX"
+    "# Getting Started with IBM WatsonX"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "65e79071",
+   "metadata": {},
+   "source": [
+    "## Accessing the Watson Machine Learning service"
    ]
   },
   {
@@ -13,7 +21,7 @@
    "id": "d18460e3",
    "metadata": {},
    "source": [
-    "### Establish a WatsonX Account\n",
+    "### Establish a WatsonX account\n",
     "\n",
     "To use this remote option, create an account on [WatsonX](https://www.ibm.com/watsonx)."
    ]
@@ -23,7 +31,7 @@
    "id": "556e261e",
    "metadata": {},
    "source": [
-    "### Provide the Environment Variables\n",
+    "### Provide the environment variables\n",
     "\n",
     "There are three ways to provide the environment variables required by `find_langchain_model()` below.  In order of precedence:\n",
     "\n",
@@ -58,7 +66,7 @@
    "id": "4b76cdf0",
    "metadata": {},
    "source": [
-    "### Provide your Base WatsonX URL\n",
+    "### Provide your base WatsonX URL\n",
     "\n",
     "Get your `WATSONX_URL` by viewing the details for the service instance from the Cloud Pak for Data web client, as described in [these watsonx.ai setup instructions](https://ibm.github.io/watsonx-ai-python-sdk/setup_cpd.html).\n",
     "\n",
@@ -67,10 +75,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ebb4d17d",
+   "metadata": {},
+   "source": [
+    "## Querying the LLM with Langchain"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "35dbaee4",
    "metadata": {},
    "source": [
-    "### Choose a Model"
+    "### Choose a model"
    ]
   },
   {
@@ -91,7 +107,7 @@
    "id": "dea4e37e",
    "metadata": {},
    "source": [
-    "### Instantiate the Model Client"
+    "### Instantiate the model client"
    ]
   },
   {
@@ -118,32 +134,22 @@
    "id": "a7f4db5e",
    "metadata": {},
    "source": [
-    "### Perform Inference"
+    "### Perform inference"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "ddfdb7ef",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\n\\nSELECT * FROM users LIMIT 50;\\n'"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "prompt = \"\"\"\n",
     "    Show me a SQL query that fetches all columns for the first 50 rows\n",
     "    in a table named 'users'.\"\"\"\n",
     "\n",
-    "model.invoke(prompt)"
+    "response = model.invoke(prompt)\n",
+    "print(response)"
    ]
   }
  ],
