Add Embeddings Models components
Signed-off-by: Fayvor Love <fayvor@gmail.com>

--- a/recipes/Getting_Started/Getting_Started_with_WatsonX.ipynb
+++ b/recipes/Getting_Started/Getting_Started_with_WatsonX.ipynb
@@ -83,10 +83,28 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ebb4d17d",
+   "metadata": {},
+   "source": [
+    "## Querying the LLM with Langchain"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ebb4d17d",
+   "metadata": {},
+   "source": [
+    "## Querying the LLM with Langchain"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "35dbaee4",
    "metadata": {},
    "source": [
-    "### Choose a model"
+    "### Choose a model\n",
+    "\n",
+    "The Granite models available on WatsonX are listed [here](https://www.ibm.com/products/watsonx-ai/foundation-models)."
    ]
   },
   {
