Update README with Components links
Signed-off-by: Fayvor Love <fayvor@gmail.com>

--- a/recipes/Components/Langchain_Embeddings_Models.ipynb
+++ b/recipes/Components/Langchain_Embeddings_Models.ipynb
@@ -24,7 +24,9 @@
    "source": [
     "### HuggingFace\n",
     "\n",
-    "HuggingFace doesn't currently have a Granite embeddings model. However, you can use the `langchain_huggingface` package to obtain another embeddings model for this provider."
+    "HuggingFace doesn't currently host a Slate embeddings model; it is coming soon.\n",
+    "\n",
+    "In the meantime, you can use the `langchain_huggingface` package to obtain another embeddings model for this provider."
    ]
   },
   {
