--- a/recipes/Getting_Started/Getting_Started_with_WatsonX.ipynb
+++ b/recipes/Getting_Started/Getting_Started_with_WatsonX.ipynb
@@ -86,7 +86,9 @@
    "id": "35dbaee4",
    "metadata": {},
    "source": [
-    "### Choose a model"
+    "### Choose a model\n",
+    "\n",
+    "The Granite models available on WatsonX are listed [here](https://www.ibm.com/products/watsonx-ai/foundation-models)."
    ]
   },
   {
