--- a/recipes/Components/Langchain_LLMs.ipynb
+++ b/recipes/Components/Langchain_LLMs.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
     "\n",
     "model = Replicate(\n",
     "    model=\"ibm-granite/granite-8b-code-instruct-128k\",\n",
-    "    model_kwargs={\"apikey\": get_env_var('REPLICATE_API_TOKEN')},\n",
+    "    replicate_api_token=get_env_var('REPLICATE_API_TOKEN'),\n",
     ")"
    ]
   },
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
