--- a/recipes/Getting_Started/Getting_Started_with_Replicate.ipynb
+++ b/recipes/Getting_Started/Getting_Started_with_Replicate.ipynb
@@ -97,18 +97,11 @@
    "source": [
     "### Choose a Model\n",
     "\n",
-    "Two Granite Code models are available in the [`ibm-granite`](https://replicate.com/ibm-granite) org at Replicate."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "2eeb4c2e-ec15-4b73-8229-35dae503115c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model_id = \"ibm-granite/granite-8b-code-instruct-128k\"\n",
-    "# model_id = \"ibm-granite/granite-20b-code-instruct-8k\""
+    "Two Granite Code models are available in the [`ibm-granite`](https://replicate.com/ibm-granite) org at Replicate:\n",
+    "\n",
+    "`ibm-granite/granite-8b-code-instruct-128k`\n",
+    "\n",
+    "`ibm-granite/granite-20b-code-instruct-8k`"
    ]
   },
   {
@@ -121,17 +114,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "e17b0cd9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ibm_granite_community.notebook_utils import get_env_var\n",
     "from langchain_community.llms import Replicate\n",
+    "from ibm_granite_community.notebook_utils import get_env_var\n",
     "\n",
     "model = Replicate(\n",
-    "    model=model_id,\n",
-    "    model_kwargs={\"apikey\": get_env_var('REPLICATE_API_TOKEN')},\n",
+    "    model=\"ibm-granite/granite-8b-code-instruct-128k\",\n",
+    "    replicate_api_token=get_env_var('REPLICATE_API_TOKEN'),\n",
     ")"
    ]
   },
