--- a/recipes/Components/Langchain_LLMs.ipynb
+++ b/recipes/Components/Langchain_LLMs.ipynb
@@ -48,7 +48,21 @@
    "source": [
     "### Ollama\n",
     "\n",
-    "Granite Code models are hosted in the [Ollama granite code library](https://ollama.com/library/granite-code)."
+    "Granite Code models are hosted in the [Ollama granite code library](https://ollama.com/library/granite-code). To use Ollama to host Granite models you need to first install the Ollama server locally on your system or in the notebook itself.\n",
+    "\n",
+    "#### Install Ollama Server Locally\n",
+    "\n",
+    "1. [Download and install Ollama](https://ollama.com/download), if you haven't already.\n",
+    "1. Start the Ollama server: `ollama serve`\n",
+    "\n",
+    "#### Install Ollama Server in the Notebook\n",
+    "\n",
+    "Following \"Option B: Shell Script (Linux)\" in [Getting Started with Ollama](https://github.com/ibm-granite-community/utils/blob/main/recipes/Getting_Started/Getting_Started_with_Ollama.ipynb), run the following commands in separate notebook cells:\n",
+    "\n",
+    "1. Install Ollama\n",
+    "2. Start the Ollama server\n",
+    "\n",
+    "A Granite model can then be served using the code cell below."
    ]
   },
   {
