Add links from Langchain LLMs to Getting Started
Signed-off-by: Fayvor Love <fayvor@gmail.com>

--- a/recipes/Components/Langchain_LLMs.ipynb
+++ b/recipes/Components/Langchain_LLMs.ipynb
@@ -24,7 +24,9 @@
    "source": [
     "### Replicate\n",
     "\n",
-    "Granite models are available in the [`ibm-granite`](https://replicate.com/ibm-granite) org at Replicate."
+    "For instructions on how to set up Replicate, see [Getting Started with Replicate](/recipes/Getting_Started/Getting_Started_with_Replicate.ipynb).\n",
+    "\n",
+    "To select a Granite model, go to the [`ibm-granite`](https://replicate.com/ibm-granite) org on Replicate."
    ]
   },
   {
@@ -48,7 +50,9 @@
    "source": [
     "### Ollama\n",
     "\n",
-    "Granite Code models are hosted in the [Ollama granite code library](https://ollama.com/library/granite-code)."
+    "For instructions on how to set up Ollama, see [Getting Started with Ollama](/recipes/Getting_Started/Getting_Started_with_Ollama.ipynb).\n",
+    "\n",
+    "To select a Granite Code model, go to the [Ollama granite code library](https://ollama.com/library/granite-code)."
    ]
   },
   {
@@ -68,7 +72,9 @@
    "source": [
     "### WatsonX\n",
     "\n",
-    "The Granite models available on WatsonX are listed [here](https://www.ibm.com/products/watsonx-ai/foundation-models)."
+    "For instructions on how to set up WatsonX, see [Getting Started with WatsonX](/recipes/Getting_Started/Getting_Started_with_WatsonX.ipynb).\n",
+    "\n",
+    "To select a Granite model, go to the [list of Foundation Models](https://www.ibm.com/products/watsonx-ai/foundation-models) on WatsonX."
    ]
   },
   {
