--- a/recipes/Components/Langchain_LLMs.ipynb
+++ b/recipes/Components/Langchain_LLMs.ipynb
@@ -24,7 +24,7 @@
    "source": [
     "### Replicate\n",
     "\n",
-    "For instructions on how to set up Replicate, see [Getting Started with Replicate](/recipes/Getting_Started/Getting_Started_with_Replicate.ipynb).\n",
+    "For instructions on how to set up Replicate, see [Getting Started with Replicate](../Getting_Started/Getting_Started_with_Replicate.ipynb).\n",
     "\n",
     "To select a Granite model, go to the [`ibm-granite`](https://replicate.com/ibm-granite) org on Replicate."
    ]
@@ -50,7 +50,7 @@
    "source": [
     "### Ollama\n",
     "\n",
-    "For instructions on how to set up Ollama, see [Getting Started with Ollama](/recipes/Getting_Started/Getting_Started_with_Ollama.ipynb).\n",
+    "For instructions on how to set up Ollama, see [Getting Started with Ollama](../Getting_Started/Getting_Started_with_Ollama.ipynb).\n",
     "\n",
     "To select a Granite Code model, go to the [Ollama granite code library](https://ollama.com/library/granite-code)."
    ]
@@ -72,7 +72,7 @@
    "source": [
     "### WatsonX\n",
     "\n",
-    "For instructions on how to set up WatsonX, see [Getting Started with WatsonX](/recipes/Getting_Started/Getting_Started_with_WatsonX.ipynb).\n",
+    "For instructions on how to set up WatsonX, see [Getting Started with WatsonX](../Getting_Started/Getting_Started_with_WatsonX.ipynb).\n",
     "\n",
     "To select a Granite model, go to the [list of Foundation Models](https://www.ibm.com/products/watsonx-ai/foundation-models) on WatsonX."
    ]
