Update after review
Review comment:

- https://github.com/ibm-granite-community/utils/pull/14#issuecomment-2385771777

Signed-off-by: Martin Hickey <martin.hickey@ie.ibm.com>

--- a/recipes/Getting_Started/Getting_Started_with_Ollama.ipynb
+++ b/recipes/Getting_Started/Getting_Started_with_Ollama.ipynb
@@ -18,18 +18,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Install Ollama\n",
+    "The Ollama server can be run locally on your system or in the notebook itself.\n",
     "\n",
-    "_Option A: Package Installer (MacOS, Windows)_\n",
+    "### Option A: Running Locally (Linux, MacOS, Windows)\n",
     "\n",
-    "[Download from Ollama.com](https://ollama.com/download) and install "
+    "1. [Download and install Ollama](https://ollama.com/download), if you haven't already.\n",
+    "1. Start the Ollama server: `ollama serve`\n",
+    "1. Pull down Granite models:\n",
+    "\n",
+    "    ```shell\n",
+    "    ollama pull granite-code:3b\n",
+    "    ollama pull granite-code:8b\n",
+    "    ollama pull granite-code:20b\n",
+    "    ```"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "_Option B: Shell Script (Linux)_"
+    "### Option B: Running in Notebook\n",
+    "\n",
+    "1. Download and install Ollama, if you haven't already:"
    ]
   },
   {
@@ -45,9 +55,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Start the Ollama server\n",
-    "\n",
-    "Using `nohup` and `&` will run the server in the background and you can close the terminal."
+    "2. Start the Ollama server using `nohup` and `&` will run the server in the background:"
    ]
   },
   {
@@ -64,15 +72,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Pull the model\n",
-    "\n",
-    "IBM Granite Code models available on Ollama can be found [here](https://ollama.com/library/granite-code).\n",
-    "\n",
-    "Granite Code 3b: `ollama pull granite-code:3b`\n",
-    "\n",
-    "Granite Code 8b: `ollama pull granite-code:8b`\n",
-    "\n",
-    "Granite Code 20b: `ollama pull granite-code:20b`"
+    "3. Pull down Granite models:"
    ]
   },
   {
@@ -81,7 +81,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!ollama pull granite-code:3b"
+    "!ollama pull granite-code:3b\n",
+    "!ollama pull granite-code:8b\n",
+    "!ollama pull granite-code:20b"
    ]
   },
   {
@@ -89,6 +91,15 @@
    "metadata": {},
    "source": [
     "## Querying the LLM with Langchain"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!curl https://ollama.ai/install.sh | sh"
    ]
   },
   {
